--- a/Index.html
+++ b/Index.html
@@ -9,9 +9,9 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="Deden Istiawan-Institut Teknologi Statistika dan Bisnis Muhammadiyah" />
+<meta name="author" content="Qurota Ayun-Institut Teknologi Statistika dan Bisnis Muhammadiyah" />
 
-<meta name="date" content="2025-10-14" />
+<meta name="date" content="2025-10-20" />
 
 <title>My Document</title>
 
@@ -2792,9 +2792,9 @@ border-radius: 0px;
 
 
 <h1 class="title toc-ignore">My Document</h1>
-<h4 class="author">Deden Istiawan-Institut Teknologi Statistika dan
-Bisnis Muhammadiyah</h4>
-<h4 class="date">2025-10-14</h4>
+<h4 class="author">Qurota Ayun-Institut Teknologi Statistika dan Bisnis
+Muhammadiyah</h4>
+<h4 class="date">2025-10-20</h4>
 
 </div>
 
